[package]
name = "rust-leet-code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1"
path = "src/easy/1/main.rs"

[[bin]]
name = "13"
path = "src/easy/13/main.rs"

[[bin]]
name = "26"
path = "src/easy/26/main.rs"

[[bin]]
name = "27"
path = "src/easy/27/main.rs"

[[bin]]
name = "36"
path = "src/medium/36/main.rs"

[[bin]]
name = "49"
path = "src/medium/49/main.rs"

[[bin]]
name = "88"
path = "src/easy/88/main.rs"

[[bin]]
name = "121"
path = "src/easy/121/main.rs"

[[bin]]
name = "128"
path = "src/medium/128/main.rs"

[[bin]]
name = "169"
path = "src/easy/169/main.rs"

[[bin]]
name = "217"
path = "src/easy/217/main.rs"

[[bin]]
name = "238"
path = "src/medium/238/main.rs"

[[bin]]
name = "242"
path = "src/easy/242/main.rs"

[[bin]]
name = "347"
path = "src/medium/347/main.rs"
